--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -169,8 +169,9 @@ IFMCMD = $(IFM) -I $(top_srcdir)/lib
 HELP2MAN = $(top_srcdir)/etc/missing --run help2man -N -n "$(MAN_TITLE)"
 HTMLDIR = html
 LATEXDIR = latex
-SPHINX = sphinx-build -N
+SPHINX = sphinx-build -N -d $(DOCTREES)
 SPHINXOPTS = 
+DOCTREES = $(srcdir)/doctrees
 
 # Distribution stuff.
 EXTRA_DIST = $(DOCFILES) ifm.1 ifm.man examples templates
@@ -397,17 +398,17 @@ guide: html
 
 force:; @ rm -rf $(HTMLDIR); $(MAKE) all
 
-setup:;	@ mkdir -p $(HTMLDIR)/.doctrees $(HTMLDIR)/.linkcheck
+setup:;	@ mkdir -p $(HTMLDIR) $(DOCTREES)
 
 html: setup conf.py logo.png
-	$(SPHINX) -b $@ $(SPHINXOPTS) . $(HTMLDIR)
+	$(SPHINX) -b $@ $(SPHINXOPTS) $(srcdir) $(HTMLDIR)
 
 latex: conf.py
 	@ mkdir -p $(LATEXDIR)
-	$(SPHINX) -b $@ $(SPHINXOPTS) . $(LATEXDIR)
+	$(SPHINX) -b $@ $(SPHINXOPTS) $(srcdir) $(LATEXDIR)
 
 linkcheck: setup conf.py
-	$(SPHINX) -b $@ $(SPHINXOPTS) . $(HTMLDIR)/.linkcheck
+	$(SPHINX) -b $@ $(SPHINXOPTS) $(srcdir) $(DOCTREES)
 
 # Man page.
 
