--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,8 +1,6 @@
 ## Automake template for IFM documentation.
 
-docdir = $(prefix)/doc
 builddir = $(top_builddir)/doc
-ifmdocdir = $(docdir)/ifm
 htmldir = $(builddir)/html
 latexdir = $(builddir)/latex
 sphinxdir = $(builddir)/sphinx
@@ -15,9 +13,6 @@ solving.rst tkifm.rst usage.rst
 
 # Programs.
 
-IFM      = $(top_srcdir)/src/ifm -s version="$(VERSION)"
-IFMCMD   = $(IFM) -I $(top_srcdir)/lib
-HELP2MAN = $(OPTIONAL) help2man -N -n "$(MAN_TITLE)"
 SPHINX   = $(OPTIONAL) sphinx-build -N -d $(sphinxdir) $(SPHINXOPTS)
 OPTIONAL = $(top_srcdir)/etc/missing --run
 
@@ -44,27 +39,6 @@ setup:;	@ mkdir -p $(htmldir) $(latexdir) $(sphinxdir)
 	    test -f $$path || ln -s $(srcdir)/$$file $$path;		\
 	done
 
-# Man page.
-
-MAN_TITLE = Interactive Fiction Mapper
-
-man_MANS = ifm.1
-
-manpage: ifm.1
-
-ifm.1: ifm.man
-	cp ifm.man ifm.tmp
-	echo "[SEE ALSO]" >> ifm.tmp
-	echo ".IP $(ifmdocdir)/index.html" >> ifm.tmp
-	echo "Online documentation" >> ifm.tmp
-	$(HELP2MAN) -o ifm.1 -i ifm.tmp $(IFM)
-	rm -f ifm.tmp
-
-mantest: man
-	groff -man -Tps ifm.1 > ifm.ps
-	gv -a4 -scale -1 -spartan ifm.ps
-	rm -f ifm.ps
-
 # Installation stuff.
 
 install-doc: install-html
@@ -85,7 +59,7 @@ $(ifmdocdir):
 
 # Distribution stuff.
 
-EXTRA_DIST = $(DOCFILES) ifm.1 ifm.man examples templates logo.png
+EXTRA_DIST = $(DOCFILES) examples templates logo.png
 
 dist-doc: $(EXTRA_DIST)
 	if test -d $(htmldir); then					\
