--- a/fig/Makefile.in
+++ b/fig/Makefile.in
@@ -16,8 +16,6 @@
 
 # Common Makefile targets.
 
-# Show recent source changes.
-
 srcdir = @srcdir@
 top_srcdir = @top_srcdir@
 VPATH = @srcdir@
@@ -183,6 +181,12 @@ testfig_SOURCES = testfig.c
 testfig_LDFLAGS = $(VARS_LIBS)
 testfig_LDADD = libfig.a -lvars -lm
 CLEANFILES = test.fig* test.eps testfig
+IFM = $(top_srcdir)/src/ifm $(IFMOPTS)
+IFMOPTS = -I $(top_srcdir)/lib -s version="$(VERSION)" -S helvetica
+docdir = $(prefix)/doc
+ifmdocdir = $(docdir)/ifm
+
+# Show recent source changes.
 DAYS = 7
 all: all-am
 
