--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -17,8 +17,6 @@
 # Automake template for IFM tests.
 
 # Common Makefile targets.
-
-# Show recent source changes.
 srcdir = @srcdir@
 top_srcdir = @top_srcdir@
 VPATH = @srcdir@
@@ -162,14 +160,18 @@ test-leave2.ifm test-link1.ifm test-link2.ifm test-lose.ifm test-nocmd.ifm \
 test-nolink1.ifm test-nolink2.ifm test-nopath.ifm test-noroom.ifm	   \
 test-note.ifm test-path.ifm test-simple.ifm test-unsafe.ifm
 
-IFM = $(top_builddir)/src/ifm $(ARGS)
-ARGS = -I$(top_srcdir)/lib
 TKIFM = $(top_builddir)/progs/tkifm
 TESTS = $(SRCS:.ifm=.test)
 EXP = $(SRCS:.ifm=.exp)
 EXTRA_DIST = README $(TESTS) $(EXP)
 SUFFIXES = .ifm .test .task .prof .tk .ps .rec
 CLEANFILES = *.out
+IFM = $(top_srcdir)/src/ifm $(IFMOPTS)
+IFMOPTS = -I $(top_srcdir)/lib -s version="$(VERSION)" -S helvetica
+docdir = $(prefix)/doc
+ifmdocdir = $(docdir)/ifm
+
+# Show recent source changes.
 DAYS = 7
 all: all-am
 
