--- a/demos/Makefile.in
+++ b/demos/Makefile.in
@@ -15,8 +15,6 @@
 @SET_MAKE@
 
 # Common Makefile targets.
-
-# Show recent source changes.
 srcdir = @srcdir@
 top_srcdir = @top_srcdir@
 VPATH = @srcdir@
@@ -150,9 +148,14 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 tkifm = @tkifm@
 EXTRA_DIST = example.ifm maptest.ifm ruins.ifm
-IFM = $(top_srcdir)/src/ifm -I $(top_srcdir)/lib -S helvetica
 SET = -s task_graph_rooms=1
 CLEANFILES = *.ps *.fig *.dot
+IFM = $(top_srcdir)/src/ifm $(IFMOPTS)
+IFMOPTS = -I $(top_srcdir)/lib -s version="$(VERSION)" -S helvetica
+docdir = $(prefix)/doc
+ifmdocdir = $(docdir)/ifm
+
+# Show recent source changes.
 DAYS = 7
 all: all-am
 
