--- a/etc/Makefile.common
+++ b/etc/Makefile.common
@@ -1,6 +1,7 @@
 # Common Makefile targets.
 
-IFM = $(top_srcdir)/src/ifm -I $(top_srcdir)/lib -s version="$(VERSION)"
+IFM = $(top_srcdir)/src/ifm $(IFMOPTS)
+IFMOPTS = -I $(top_srcdir)/lib -s version="$(VERSION)" -S helvetica
 
 docdir = $(prefix)/doc
 ifmdocdir = $(docdir)/ifm
