--- a/win32/Makefile
+++ b/win32/Makefile
@@ -12,9 +12,8 @@ ZIPDIR = ifm
 IFM = ifm.exe
 DLL = /bin/cygwin1.dll
 
-FILES = $(TOPDIR)/README $(TOPDIR)/NEWS $(TOPDIR)/COPYING
 PROGS = $(PROGDIR)/*.pl
-DOCS  = $(DOCDIR)/ifm.pdf $(DOCDIR)/ifm
+DOCS  = $(DOCDIR)/html
 LIBS  = $(LIBDIR)/*.ifm $(LIBDIR)/ifm-pro.ps $(LIBDIR)/ifm-rgb.txt
 MAPS  = $(MAPDIR)/*.ifm $(MAPDIR)/README
 
@@ -25,16 +24,13 @@ all: test
 
 test:; $(MAKE) IFM=ifm DLL="" zip
 
-zip: init files progs docs lib demos final
+zip: init readme progs docs lib demos final
 
 init:;	rm -rf $(ZIPDIR)
 	mkdir $(ZIPDIR)
 
-files:;	cp $(FILES) $(ZIPDIR)
-	- for i in README NEWS COPYING; do				\
-	   mv $(ZIPDIR)/$$i $(ZIPDIR)/$$i.txt;				\
-	done
-	cp README.win32 $(ZIPDIR)/WIN32.txt
+readme:
+	echo See docs/index.html for IFM documentation > $(ZIPDIR)/README.txt
 
 progs:; cp $(SRCDIR)/$(IFM) $(DLL) $(ZIPDIR)
 	strip $(ZIPDIR)/$(IFM)
@@ -43,7 +39,7 @@ progs:; cp $(SRCDIR)/$(IFM) $(DLL) $(ZIPDIR)
 	cat $(CTEXT) $(TKIFM) > $(ZIPDIR)/progs/tkifm.tcl
 
 docs:;	- mkdir $(ZIPDIR)/docs
-	- cp -r $(DOCS) $(ZIPDIR)/docs
+	- cp -r $(DOCS)/* $(ZIPDIR)/docs
 
 lib:;	cp $(LIBS) $(ZIPDIR)
 
