--- a/doc/conf.py.in
+++ b/doc/conf.py.in
@@ -119,14 +119,14 @@ html_last_updated_fmt = '%b %d, %Y'
 html_use_modindex = False
 
 # If false, no index is generated.
-html_use_index = False
+html_use_index = True
 
 # If true, the index is split into individual pages for each letter.
-#html_split_index = False
+html_split_index = False
 
 # If true, the reST sources are included in the HTML build as
 # _sources/<name>.
-#html_copy_source = True
+html_copy_source = True
 
 # If true, an OpenSearch description file will be output, and all pages
 # will contain a <link> tag referring to it.  The value of this option must
