--- a/progs/Makefile.in
+++ b/progs/Makefile.in
@@ -133,6 +133,7 @@ host_os = @host_os@
 host_vendor = @host_vendor@
 ifm2dev = @ifm2dev@
 ifm2tex = @ifm2tex@
+ifm2web = @ifm2web@
 includedir = @includedir@
 infodir = @infodir@
 install_sh = @install_sh@
@@ -151,8 +152,8 @@ subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 tkifm = @tkifm@
-bin_SCRIPTS = @tkifm@ @ifm2dev@ @ifm2tex@ @scr2ifm@
-EXTRA_SCRIPTS = tkifm ifm2dev ifm2tex scr2ifm
+bin_SCRIPTS = @tkifm@ @ifm2dev@ @ifm2tex@ @ifm2web@ @scr2ifm@
+EXTRA_SCRIPTS = tkifm ifm2dev ifm2tex ifm2web scr2ifm
 EXTRA_DIST = tkifm.tcl ifm2dev.pl ifm2tex.pl scr2ifm.pl
 CLEANFILES = $(bin_SCRIPTS) *.tex *.aux *.dvi *.lo* *.eps *.ps *.toc
 IFM = $(top_srcdir)/src/ifm $(IFMOPTS)
@@ -346,17 +347,7 @@ tkifm: ctext/ctext.tcl tkifm.tcl
 	cat $^ >> $@
 	chmod +x $@
 
-scr2ifm: scr2ifm.pl
-	echo '#! $(PERL)' > $@
-	cat $< >> $@
-	chmod +x $@
-
-ifm2dev: ifm2dev.pl
-	echo '#! $(PERL)' > $@
-	cat $< >> $@
-	chmod +x $@
-
-ifm2tex: ifm2tex.pl
+%: %.pl
 	echo '#! $(PERL)' > $@
 	cat $< >> $@
 	chmod +x $@
