--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -157,6 +157,7 @@ host_os = @host_os@
 host_vendor = @host_vendor@
 ifm2dev = @ifm2dev@
 ifm2tex = @ifm2tex@
+ifm2web = @ifm2web@
 includedir = @includedir@
 infodir = @infodir@
 install_sh = @install_sh@
